# Hoopla

./: .env  .gitignore  README.md  copy_code.py  inspect_index.py  pyproject.toml  update_index.py
app/: README.md  __init__.py  admin_panel_ui.py  auth.py  database.py  model_handler.py  streamlit_app.py
cache/: avg_doc_length.pkl  codebase_data.json  codebase_embeddings.npy  codebase_embeddings_code.npy  codebase_index.pkl  codebase_keyword_index.pkl  readmes.pkl
cli/: README.md  augmented_generation_cli.py  codebase_rag_cli.py  describe_image_cli.py  evaluation_cli.py  hybrid_search_cli.py  keyword_search_cli.py  multimodal_search_cli.py  path.py  semantic_search_cli.py  test_gemini.py  utils.py
cli/lib/: augmented_generation.py  codebase_rag.py  describe_image.py  hybrid_search.py  keyword_search.py  multimodal_search.py  query_enhancement.py  readme_rag.py  reranking.py  search_utils.py  semantic_search.py  vector_store.py
data/: hoopla.db
tests/: test_backend.py
